wp-content/themes/aaf/style.css
/*
Theme Name: AAF 2013 Theme
Theme URI: http://YourCustomBlog.com/
Author: Dario Novoa
Author URI: http://darionovoa.info
Description: Omega Boys Club Theme by YCB
Version: 1.0
*/

/*Lets get the fonts in*/
@font-face {
  font-family: 'VAGRoundedLight';
  src: url('font/vag-rounded-light.eot'); /* IE9 Compat Modes */
  src: url('font/vag-rounded-light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('font/vag-rounded-light.woff') format('woff'), /* Modern Browsers */
       url('font/vag-rounded-light.ttf')  format('truetype'), /* Safari, Android, iOS */
       url('font/vag-rounded-light.svg#miksrdyxbp') format('svg'); /* Legacy iOS */
       
  font-style:   normal;
  font-weight:  200;
}

@font-face {
    font-family: 'UniversLight';
    src: url('font/univers_45_light-webfont.eot');
    src: url('font/univers_45_light-webfont.eot?#iefix') format('embedded-opentype'),
         url('font/univers_45_light-webfont.woff') format('woff'),
         url('font/univers_45_light-webfont.ttf') format('truetype'),
         url('font/univers_45_light-webfont.svg#univers_45_lightregular') format('svg');
    font-weight: normal;
    font-style: normal;

}

/*Globals*/
.center {
	margin: 0 auto;
}

select, textarea,
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"]
.uneditable-input {
	margin-bottom: 0;
}

/* Corner Effect */
.corner-left:before {
	content: "";
	background: url(images/corners.png) left top repeat;
	width: 10px;
	height: 36px;
	position: absolute;
	left: -10px;
	top: 0;
}

.corner-right:after {
	content: "";
	background: url(images/corners.png) right top repeat;
	width: 10px;
	height: 36px;
	position: absolute;
	right: -10px;
	top: 0;
}

.btn {
	text-transform: uppercase;
}
.btn-danger {
	background: #BE2025;
	background-image: none;
}

/*Mobile Menu Version styles*/
#phonenav {}

#phonenav #navigation ul {
	width: 100%;
	padding: 0;
}

#phonenav #navigation ul li {
	border-bottom: 1px solid #333;
	display: block;
	width: 100%;
}

#phonenav #navigation ul li:lastchild {
	border-bottom: none;
}

#phonenav .menu {
	-webkit-transition:	all .2s ease-in-out;
	-moz-transition: 	all .2s ease-in-out;
	-ms-transition:	 	all .2s ease-in-out;
	-o-transition:		all .2s ease-in-out;
	transition:			all .2s ease-in-out;
}

.navbar-inner {
	background: none;
	border-radius: 0;
	padding-top: .5rem;
}

.socialbtns {
	margin: 0 auto 1rem auto;
	width: 11rem;
	text-align: center;

}
.socialbtns li {
	display: inline-block;
	list-style-type: none;
}

.socialbtns li a {
	display: block;
	width: 45px;
	height: 45px;
	border-radius: 80px;
}
	.socialbtns li > a:active {
		box-shadow: 1px 1px 5px #ccc;
	}

.socialbtns li.facebook { background: url(images/social_icons.png)  -6px -118px no-repeat; }
.socialbtns li.twitter  { background: url(images/social_icons.png)  -6px -58px no-repeat; }
.socialbtns li.instagram { background: url(images/social_icons.png) -6px -2px no-repeat; }

.logo {
	display: block;
	width: 110px;
	height: 92px;
	background: url('images/logo_mobile.png') 0 0 no-repeat;
	margin: 0 0 1.5rem 1.5rem;
}
	.logo a {
		display: block;
		width: 100%;
		height: 100%;
	}


/*Rest of the Site (General)*/
html, body {
	padding: 0;
    height: 100%;
}

.page {
	min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -18.75rem;
}

.site-header .container {
	background: #fff;
}

.site-title {
	font-family: 'VAGRoundedLight', Helvetica, Arial, sans-serif;
	font-size: 1rem;
	line-height: 1.5rem;
	font-weight: lighter;
	letter-spacing: .07rem;
	text-transform: uppercase;
	padding-top: 4.4rem;
	padding-right: 20px;
}

.site-header #navigation li:hover {
	background: #ccc;
}

.site-header #navigation li a:hover {
	background: #ccc;
	color: #000;
	line-height: 165%
}

.site-header #navigation li.current-menu-item a {
	padding: 6px 13px;
	line-height: 150%
}

.site-header #navigation > ul > li {
	border: none;
}

#navigation ul li ul {
	width: auto;
}

#navigation .dropdown-menu > li > a, 
#navigation .dropdown-menu > li > a:hover, 
#navigation .dropdown-menu > li > a:focus {
	padding: 1rem 13px;
	line-height: 20%;
}

#navigation .dropdown-menu > li.active > a, 
#navigation .dropdown-menu > .active > a:hover, 
#navigation .dropdown-menu > .active > a:focus {
	background: #BE2025;
	color: #fff;
	padding: 1rem 13px;
	line-height: 20%;
}

.site-main-menu {
	font-family: 'UniversLight', Helvetica, Arial, sans-serif;
	text-transform: uppercase;
}

#navigation ul {
	float: right;
}

.site-main {}

.site-content {
	padding-left: 1rem;
}

.carousel-caption {
	font-family: 'VAGRoundedLight', Arial, Helvetica, sans-serif;
	font-weight: lighter;
	letter-spacing: .08rem;
	color: #fff;
}
.carousel-caption h4 {
	font-size: 2rem;
	font-weight: lighter;
	letter-spacing: .1rem;
	text-transform: uppercase;
	color: #BE2025;
}

.sidebarmobile {}

.sidebarmobile ul {
	display: block;
	margin-bottom: 0;
	border-bottom: 1px solid #fff;
}

	.sidebarmobile ul li {
		background: #000;
		font-family: 'VAGRoundedLight', Arial, Helvetica, sans-serif;
		font-size: 1.3rem;
		font-weight: lighter;
		letter-spacing: .08rem;
		text-transform: uppercase;
		text-align: center;
		padding: 1rem 0rem;
	}

		.sidebarmobile ul li a{
			color: #fff;
		}

		.sidebarmobile ul li small {
			font-size: .7rem;
			color: #fff;
			line-height: 0;
		}
		.sidebarmobile .widget {
			margin-bottom: 0;
		}


.sidebar-image {
	margin:  .1rem .1rem 0 0;
		}

.widget .widget-title {
	font-family: 'VAGRoundedLight', Arial, Helvetica, sans-serif;
	font-weight: lighter;
	letter-spacing: .08rem;
	text-transform: uppercase;
	background: #333;
	padding: 0 1rem;
	color: #fff;
}

	.widget > div {
		padding-right: .5rem;
	}

	.donate-ad {
		background: #000;
		font-family: 'UniversLight' Arial, Helvetica, sans-serif;
		color: #fff;
		padding: 0 0 1rem 1rem;
		text-align: center;
	}

	.donate-ad h3 {
		color: #fff;
		margin-bottom: 0;
		font-size: 1.5rem;
	}

	.donate-ad p {
		margin: 0 1rem 1rem 0;
	}

	.donate-ad .btn-block {
		width: 75%;
		margin: 0 auto;
		font-size: 1.25rem;
		padding: 12px; 
	}

.site-footer {
	height: 15.5rem;/* about 300px*/
	background: #000;
	color: #fff;
	font-family: 'UniversLight' Arial, Helvetica, sans-serif;
	line-height: 225%;
}

.site-footer h3 {		
color: #fff;
margin: 0;
text-transform: uppercase;
letter-spacing: -1px;
font-size: 1.25em;

}

img.map {
	margin-right: 1em;
}

.site-footer nav {
	margin-top: 1rem;
}

.site-footer nav > div, .site-footer ul {
	display: inline;
	margin-left: 0;
}

.site-footer .nav li {
	list-style: none;
	display: inline;
}

 .site-footer nav .footer-menu ul, .credits {
	float: right;
	padding-right: 30px;
	text-align: right;
}

.site-info{
	margin-left: 0;
}

/*front page only*/
.home.page .entry-header {
	display: none;
}

.home.page .site-content header {
	position: relative;
}
.home.page .sectiontitle {
	font-family: 'VAGRoundedLight', Arial, Helvetica, sans-serif;
	font-weight: lighter;
	letter-spacing: .08rem;
	text-transform: uppercase;
	background: #333;
	padding: 0 1rem;
	color: #fff;
}
	.sectiontitle:after {
		content: " ";
		background: url('images/40px_right_corner_grey.png') 0 0 no-repeat;
		height: 40px;
		width: 10px;
		position: absolute;
		right: -10px;
	}

/*Media queries*/
/* Large desktop */
@media (min-width: 979px) {
	body {
		background: url('images/bg_large_screens.png') 0 0 repeat;
	}

	.logo {
		width: 220px;
		height: 180px;
		background: url('images/logo_large.png') 0 0 no-repeat;
		margin-top: -18px;
	}

	.utilitynav {
		background: #000;
		height: 45px;
		font-family: 'VAGRoundedLight', Arial, Helvetica, sans-serif;
		font-size: 1.2rem;
		text-transform: uppercase;
		letter-spacing: 1px;
		box-sizing: border-box;
	}

	.utilitynav a {
		display: block;
		width: 100%;
		height: 100%;
		color: #fff;
	}
		.utilitynav div {
			height: 100%;
			margin-left: auto;
			text-align: center;
			padding-top: .7rem;
			box-sizing: border-box;
		}

		.utilitynav a {
			-webkit-transition:	all .2s ease-out;
			-moz-transition: 	all .2s ease-out;
			-ms-transition:	 	all .2s ease-out;
			-o-transition:		all .2s ease-out;
			transition:			all .2s ease-out;
		}

		.utilitynav a:hover {
			padding-top: .35rem;
		}

		div.newsletter {
			background: #bcbdbf;
			color: #333;
			padding-top: .5rem;
		}
			.newsletter input {
				background: #333;
				color: #ccc;
				border-radius: 0;
			}
			.newsletter input::-webkit-input-placeholder {
			   color: #fff;
			   font-size: .7rem;
			}

			.newsletter input:-moz-placeholder { /* Firefox 18- */
			   color: #fff;
			   font-size: .7rem;  
			}

			.newsletter input::-moz-placeholder {  /* Firefox 19+ */
			   color: #fff;
			   font-size: .7rem;  
			}

			.newsletter input:-ms-input-placeholder {  
			   color: #fff;
			   font-size: .7rem;  
			}
		.donate {
			background: #BE2025;
		}
		.news {
			background: #000;
			padding-left: 35px;
		}

		.icon-news {
			color: #BE2025;
		}

	.site {
		padding-top: 1.0rem;
	}

	.site-title {
		font-size: 2.75rem;
		line-height: 3rem;
		text-align: right;
		color: #404041;
	}

	.content-wrap {
		background: #fff;
		padding: 1.5rem 0;
		box-sizing: border-box;
	}

	.site-header .menu-container {
		margin-bottom: 0;
	}

	.visible-desktop .site-navigation {
		background: #000;
	}
}

@media (min-width: 1200px) {
	.site-title {
		font-size: 3.2rem;
		line-height: 3.5rem;
		padding-top: 3.6rem;
	}
}

/* Portrait tablet to landscape and desktop */
@media only screen (min-width: 768px) 
and (max-width: 979px) 
and (orientation: landscape) 
{ 
	#phonenav #navigation ul {
		width: auto;
	}
	#phonenav #navigation ul li {
		background: none;
		border-bottom: none;
		display: block;
		width: auto;
	}
}

/* Landscape phone to portrait tablet */
@media (max-width: 767px) { 
	.nav-collapse .dropdown-menu {
		background-color: #fff;
	}
	.fc-event-title {
		display: none;
	}
	
}

/* Landscape phones and down */
@media (max-width: 480px) { 

.site-content {
padding-right: 1rem;
}

	.widget > div {
		padding-left: .5rem;
	}

	.EO_Event_List_Widget {
		padding: 0 .5rem;
	}
	 }

